--- a/index.html
+++ b/index.html
@@ -16,16 +16,20 @@
 </head>
 <body>
 
-<h2><p class="header-stuff">Sonnet</p></h2>
+<h2><p class="header-stuff">R. Sonnet-Writing Robot</p></h2>
 
-<table>
+<table id="optionsTable">
     <tr>
         <td>
             <textarea id="subject" placeholder="What is the poem about?" rows="1" cols="30" maxlength="50"></textarea>
         </td>
+    </tr>
+    <tr>
         <td>
             <textarea id="style" placeholder="What is the style of the poem?" rows="1" cols="30" maxlength="50"></textarea>
         </td>
+    </tr>
+    <tr>
         <td><select class="poetSelect" id="poetSelect">
             <option value="" disabled selected>In the style of which poet?</option>
             <option value="millay">Edna St. Vincent Millay</option>
