noise, silver easter egg on hover

--- a/index.html
+++ b/index.html
@@ -17,7 +17,11 @@
 </head>
 <body>
 
-<h2><p class="header-stuff">R. Sonnet-Writing Robot</p></h2>
+<img id="silverBotImg" src="img/big_pixel_silver.png" alt="">
+
+<h2>
+    <p class="header-stuff" id="RobotHeader">R. Sonnet-Writing Robot</p>
+</h2>
 
 <table id="optionsTable">
     <tr>
